added alert bar to top of page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,32 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<script type="text/javascript" src="assets/js/script.js"></script>
 <title>Wanderers Way</title>
 </head>
+
 <body>
-<div>
-    <img class="bg" src="assets/images/main.webp" alt="forest-fog">
-</div>
+ 
+    <!-- Alert -->
+
+    <div class="container-fluid alert alert-danger">
+        <div class="row text-center">
+            <div class="col-12">
+                <div>
+                    <strong>Due to The Coronavirus (Covid-19 / C-19) Pandemic, some destinations
+                        may be unavailable. Please keep up to date with advice
+                        by visiting
+                        <a href="https://www.gov.ie/en/campaigns/c36c85-covid-19-coronavirus/"
+                            target="_blank">Gov.ie.</a></strong>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+<script type="text/javascript" src="assets/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
