added main choice images

--- a/index.html
+++ b/index.html
@@ -49,8 +49,37 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container-fluid media-main">
+        <section class="choice-container text-center mt-5">
+            <div class="row welcome-heading">
+                <div class="col-12">
+                    <h1>
+                        <i class="d-none d-sm-inline"></i> Which way shall you wander? <i class="d-none d-sm-inline"></i>
+                    </h1>
+                </div>
+            </div>
+        </section>
+    </div>
    
 
+    <main class="grid">
+        <div class="container container-main mt-5">
+            <div class="row">
+                <div class="col-6 text-center sun-media">
+                    <h1>
+                        Sun
+                    </h1>
+                </div>
+                <div class="col-6 text-center snow-media">
+                     <h1>
+                        Snow
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </main>
+        
 
 
 <script type="text/javascript" src="assets/js/script.js"></script>
