added background image

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Wanderers Way</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Wanderers Way</title>
 </head>
 
 <body>
- 
+
     <!-- Alert -->
 
     <div class="container-fluid alert alert-danger">
@@ -50,41 +51,46 @@
         </div>
     </nav>
 
-    <div class="container-fluid media-main">
+   <div class="container-choice">
+    <div class="container-fluid media-main jumbotron">
         <section class="choice-container text-center mt-5">
             <div class="row welcome-heading">
                 <div class="col-12">
                     <h1>
-                        <i class="d-none d-sm-inline"></i> Which way shall you wander? <i class="d-none d-sm-inline"></i>
+                        <i class="d-none d-sm-inline"></i> Which way shall you wander? <i
+                            class="d-none d-sm-inline"></i>
                     </h1>
                 </div>
             </div>
+            <main class="grid">
+                <div class="container container-main">
+                    <div class="row">
+                        <div class="col-4 text-center sun-media">
+                            <h1>
+                                Sun
+                            </h1>
+                        </div>
+                         <div class="col-4">
+                        </div>
+                        <div class="col-4 text-center snow-media">
+                            <h1>
+                                Snow
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </section>
     </div>
-   
-
-    <main class="grid">
-        <div class="container container-main mt-5">
-            <div class="row">
-                <div class="col-6 text-center sun-media">
-                    <h1>
-                        Sun
-                    </h1>
-                </div>
-                <div class="col-6 text-center snow-media">
-                     <h1>
-                        Snow
-                    </h1>
-                </div>
-            </div>
-        </div>
-    </main>
-        
+   </div>
 
 
-<script type="text/javascript" src="assets/js/script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
