changed border radius and added picture

--- a/index.html
+++ b/index.html
@@ -55,24 +55,23 @@
     <div class="container-fluid media-main jumbotron">
         <section class="choice-container text-center mt-5">
             <div class="row welcome-heading">
-                <div class="col-12">
+                <div class="col-12 mt-5 choice-question">
                     <h1>
-                        <i class="d-none d-sm-inline"></i> Which way shall you wander? <i
-                            class="d-none d-sm-inline"></i>
+                        <p class="col-12"> Which way shall you wander? </p>
                     </h1>
                 </div>
             </div>
             <main class="grid">
-                <div class="container container-main">
+                <div class="container mt-5">
                     <div class="row">
-                        <div class="col-4 text-center sun-media">
+                        <div class="col-4 col-md-4 text-center sun-media mt-5">
                             <h1>
                                 Sun
                             </h1>
                         </div>
                          <div class="col-4">
                         </div>
-                        <div class="col-4 text-center snow-media">
+                        <div class="col-4 col-md-4 text-center snow-media mt-5">
                             <h1>
                                 Snow
                             </h1>
