added links to navbar for all pages so far

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                     <a class="nav-link current" href="index.html">Home<span class="sr-only">Home</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="sun.html">Sun</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="snow.html">Snow</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
             </ul>
@@ -64,14 +70,14 @@
             <main class="grid">
                 <div class="container mt-5">
                     <div class="row">
-                        <div class="col-4 col-md-4 text-center sun-media mt-5">
+                        <div class="col-4 col-md-4 text-center sun-media mt-5" id = "sun-1">
                             <h1>
                                 Sun
                             </h1>
                         </div>
                          <div class="col-4">
                         </div>
-                        <div class="col-4 col-md-4 text-center snow-media mt-5">
+                        <div class="col-4 col-md-4 text-center snow-media mt-5" id = "snow-1">
                             <h1>
                                 Snow
                             </h1>
