--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
             <main class="grid">
                 <div class="container mt-5">
                     <div class="row">
-                        <div class="col-4 col-md-4 text-center sun-media mt-5" onclick="sunFunction()" id = "sun-1">
+                        <div class="col-4 col-md-4 text-center sun-media mt-5"  id = "sun-1">
                             <h1>
                                 Sun
                             </h1>
                         </div>
                          <div class="col-4">
                         </div>
-                        <div class="col-4 col-md-4 text-center snow-media mt-5" onclick="snowFunction()" id = "snow-1">
+                        <div class="col-4 col-md-4 text-center snow-media mt-5"  id = "snow-1">
                             <h1>
                                 Snow
                             </h1>
