--- a/snow.html
+++ b/snow.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body>
+<body onload="cloneFunction1()">
 
     <!-- Alert -->
 
@@ -56,6 +56,14 @@
             </ul>
         </div>
     </nav>
+
+    <div class="snow-card" style="width: 18rem;" id="card-1">
+        <img class="card-img-top" src="assets/images/snow.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Munich</h5>
+            <p class="card-text">€€€</p>
+        </div>
+    </div>
 
 
     <script type="text/javascript" src="assets/js/script.js"></script>
