--- a/sun.html
+++ b/sun.html
@@ -56,8 +56,7 @@
             </ul>
         </div>
     </nav>
-
-    <div class="card" style="width: 18rem;" id="card-1">
+    <div class="sun-card" style="width: 18rem;" id="card-1">
         <img class="card-img-top" src="assets/images/sun4.webp" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Barcelona</h5>
