added buttons to page to help filter content

--- a/sun.html
+++ b/sun.html
@@ -57,6 +57,11 @@
         </div>
     </nav>
 
+    <div id="myBtnContainer">
+        <button class="btn active"  onclick="filterSelection('all')"> Show all</button>
+        <button class="btn"  onclick="filterSelection('budget')"> Budget</button>
+        <button class="btn"  onclick="filterSelection('luxury')"> Luxury</button>
+    </div>
 
 
     <script type="text/javascript" src="assets/js/script.js"></script>
