--- a/sun.html
+++ b/sun.html
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="btn active"  onclick="filterSelection('all')"> Show all</button>
-        <button class="btn"  onclick="filterSelection('budget')"> Budget</button>
-        <button class="btn"  onclick="filterSelection('luxury')"> Luxury</button>
+        <button class="btn"> Show all</button>
+        <button class="btn"> Budget</button>
+        <button class="btn"> Luxury</button>
     </div>
 
 
