--- a/sun.html
+++ b/sun.html
@@ -59,8 +59,8 @@
 
     <div id="myBtnContainer">
         <button class="btn"> Show all</button>
-        <button class="btn"> Budget</button>
-        <button class="btn"> Luxury</button>
+        <button class="btn" onclick="showBudget()"> Budget</button>
+        <button class="btn" onclick="showLuxury()"> Luxury</button>
     </div>
 
 
