changed vailla js to jquery for filter functions easier updating and readability

--- a/sun.html
+++ b/sun.html
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="btn"> Show all</button>
-        <button class="btn" onclick="showBudget()"> Budget</button>
-        <button class="btn" onclick="showLuxury()"> Luxury</button>
+        <button class="btn"  id ="showAll" onclick="showAllSun()"> Show all</button>
+        <button class="btn"  id ="budget" onclick="showBudgetSun()"> Budget</button>
+        <button class="btn"  id ="luxury" onclick="showLuxurySun()"> Luxury</button>
     </div>
 
 
