added issue to readme

--- a/snow.html
+++ b/snow.html
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="btn active"  onclick="filterSelection('all')"> Show all</button>
-        <button class="btn"  onclick="filterSelection('budget')"> Budget</button>
-        <button class="btn"  onclick="filterSelection('luxury')"> Luxury</button>
+        <button class="btn active"  onclick="showAllSnow()"> Show all</button>
+        <button class="btn"  onclick="showBudgetSnow()"> Budget</button>
+        <button class="btn"  onclick="showLuxurySnow()"> Luxury</button>
     </div>
 
 
