added footers to all pages

--- a/sun.html
+++ b/sun.html
@@ -62,6 +62,37 @@
         <button class="btn"  id ="budget" onclick="showBudgetSun()"> Budget</button>
         <button class="btn"  id ="luxury" onclick="showLuxurySun()"> Luxury</button>
     </div>
+    <footer>
+        <section id="footer">
+            <div class="container-fluid">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-12">
+                            <h5>Follow Us on social media</h5>
+                        </div>
+                        <div class="container social-icons">
+                            <div class="row">
+                                <div class="col-12">
+                                    <a href="https://www.facebook.com/" target="_blank">
+                                        <i class="fab fa-facebook-square"></i>
+                                    </a>
+                                    <a href="https://www.twitter.com/" target="_blank">
+                                        <i class="fab fa-twitter-square"></i>
+                                    </a>
+                                    <a href="https://www.instagram.com/" target="_blank">
+                                        <i class="fab fa-instagram-square"></i>
+                                    </a>
+                                    <a href="https://www.youtube.com/" target="_blank">
+                                        <i class="fab fa-youtube-square"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 
     <script type="text/javascript" src="assets/js/script.js"></script>
