changed button styles to provide better functionality with bootstrap

--- a/snow.html
+++ b/snow.html
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="btn active"  onclick="showAllSnow()"> Show all</button>
-        <button class="btn"  onclick="showBudgetSnow()"> Budget</button>
-        <button class="btn"  onclick="showLuxurySnow()"> Luxury</button>
+        <button class="myBtn active"  onclick="showAllSnow()"> Show all</button>
+        <button class="myBtn"  onclick="showBudgetSnow()"> Budget</button>
+        <button class="myBtn"  onclick="showLuxurySnow()"> Luxury</button>
     </div>
     <footer>
         <section id="footer">
