--- a/sun.html
+++ b/sun.html
@@ -58,10 +58,11 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="btn"  id ="showAll" onclick="showAllSun()"> Show all</button>
-        <button class="btn"  id ="budget" onclick="showBudgetSun()"> Budget</button>
-        <button class="btn"  id ="luxury" onclick="showLuxurySun()"> Luxury</button>
+        <button class="myBtn active"  id ="showAll" onclick="showAllSun()"> Show all</button>
+        <button class="myBtn"  id ="budget" onclick="showBudgetSun()"> Budget</button>
+        <button class="myBtn"  id ="luxury" onclick="showLuxurySun()"> Luxury</button>
     </div>
+    <div id ="main"></div>
     <footer>
         <section id="footer">
             <div class="container-fluid">
