fixed issue with footer display

--- a/snow.html
+++ b/snow.html
@@ -62,10 +62,8 @@
         <button class="myBtn"  onclick="showBudgetSnow()"> Budget</button>
         <button class="myBtn"  onclick="showLuxurySnow()"> Luxury</button>
     </div>
-    <footer>
-        <section id="footer">
-            <div class="container-fluid">
-                <div class="container text-center">
+    <footer class= "sticky-footer">
+            <div class="container-fluid text-center">
                     <div class="row">
                         <div class="col-12">
                             <h5>Follow Us on social media</h5>
@@ -90,8 +88,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
     </footer>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
