--- a/sun.html
+++ b/sun.html
@@ -62,16 +62,12 @@
         <button class="myBtn"  id ="budget" onclick="showBudgetSun()"> Budget</button>
         <button class="myBtn"  id ="luxury" onclick="showLuxurySun()"> Luxury</button>
     </div>
-    <div id ="main"></div>
-    <footer>
-        <section id="footer">
-            <div class="container-fluid">
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <h5>Follow Us on social media</h5>
-                        </div>
-                        <div class="container social-icons">
+    <div id ="main" class="container">
+        <div class="row" id="main-row">
+        </div>
+    </div>
+    <footer class="sticky-footer text-center">
+                        <div class="container-fluid social-icons">
                             <div class="row">
                                 <div class="col-12">
                                     <a href="https://www.facebook.com/" target="_blank">
@@ -89,10 +85,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </footer>
 
 
