--- a/index.html
+++ b/index.html
@@ -57,67 +57,57 @@
         </div>
     </nav>
 
-   <div class="container-choice">
-    <div class="container-fluid media-main jumbotron">
-        <section class="choice-container text-center mt-5">
-            <div class="row welcome-heading">
-                <div class="col-12 mt-5 choice-question">
-                    <h1>
-                        <p class="col-12"> Which way shall you wander? </p>
-                    </h1>
-                </div>
-            </div>
-            <main class="grid">
-                <div class="container mt-5">
-                    <div class="row">
-                        <div class="col-4 col-md-4 text-center sun-media mt-5"  id = "sun-1">
-                            <h1>
-                                Sun
-                            </h1>
-                        </div>
-                         <div class="col-4">
-                        </div>
-                        <div class="col-4 col-md-4 text-center snow-media mt-5"  id = "snow-1">
-                            <h1>
-                                Snow
-                            </h1>
-                        </div>
+    <div class="container-choice">
+        <div class="container-fluid media-main jumbotron">
+            <section class="choice-container text-center mt-5">
+                <div class="row welcome-heading">
+                    <div class="col-12 mt-5 choice-question">
+                        <h1>
+                            <p class="col-12"> Which way shall you wander? </p>
+                        </h1>
                     </div>
                 </div>
-            </main>
-        </section>
-    </div>
-   </div>
-   <footer>
-            <div class="container-fluid">
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <h5>Follow Us on social media</h5>
-                        </div>
-                        <div class="container social-icons">
-                            <div class="row">
-                                <div class="col-12">
-                                    <a href="https://www.facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-square"></i>
-                                    </a>
-                                    <a href="https://www.twitter.com/" target="_blank">
-                                        <i class="fab fa-twitter-square"></i>
-                                    </a>
-                                    <a href="https://www.instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram-square"></i>
-                                    </a>
-                                    <a href="https://www.youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube-square"></i>
-                                    </a>
-                                </div>
+                <main class="grid">
+                    <div class="container mt-5">
+                        <div class="row">
+                            <div class="col-4 col-md-4 text-center sun-media mt-5" id="sun-1">
+                                <h1>
+                                    Sun
+                                </h1>
+                            </div>
+                            <div class="col-4">
+                            </div>
+                            <div class="col-4 col-md-4 text-center snow-media mt-5" id="snow-1">
+                                <h1>
+                                    Snow
+                                </h1>
                             </div>
                         </div>
                     </div>
+                </main>
+            </section>
+        </div>
+    </div>
+    <footer class="sticky-footer text-center">
+        <div class="container-fluid social-icons">
+            <div class="row">
+                <div class="col-12">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fab fa-instagram-square"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <i class="fab fa-youtube-square"></i>
+                    </a>
                 </div>
             </div>
+        </div>
     </footer>
-
 
 
 
