--- a/snow.html
+++ b/snow.html
@@ -58,36 +58,33 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="myBtn active"  onclick="showAllSnow()"> Show all</button>
-        <button class="myBtn"  onclick="showBudgetSnow()"> Budget</button>
-        <button class="myBtn"  onclick="showLuxurySnow()"> Luxury</button>
+        <button class="myBtn active" onclick="showAllSnow()"> Show all</button>
+        <button class="myBtn" onclick="showBudgetSnow()"> Budget</button>
+        <button class="myBtn" onclick="showLuxurySnow()"> Luxury</button>
     </div>
-    <footer class= "sticky-footer">
-            <div class="container-fluid text-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <h5>Follow Us on social media</h5>
-                        </div>
-                        <div class="container social-icons">
-                            <div class="row">
-                                <div class="col-12">
-                                    <a href="https://www.facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-square"></i>
-                                    </a>
-                                    <a href="https://www.twitter.com/" target="_blank">
-                                        <i class="fab fa-twitter-square"></i>
-                                    </a>
-                                    <a href="https://www.instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram-square"></i>
-                                    </a>
-                                    <a href="https://www.youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube-square"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <div id="main" class="container">
+        <div class="row" id="main-row">
+        </div>
+    </div>
+    <footer class="sticky-footer text-center">
+        <div class="container-fluid social-icons">
+            <div class="row">
+                <div class="col-12">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fab fa-instagram-square"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <i class="fab fa-youtube-square"></i>
+                    </a>
                 </div>
+            </div>
+        </div>
     </footer>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
