shortened code to toggle budgets by adding category

--- a/snow.html
+++ b/snow.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload="cloneFunction1()">
+<body onload= "cloneFunction1()">
 
     <!-- Alert -->
 
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="myBtn active" onclick="showAllSnow()"> Show all</button>
-        <button class="myBtn" onclick="showBudgetSnow()"> Budget</button>
-        <button class="myBtn" onclick="showLuxurySnow()"> Luxury</button>
+        <button class="myBtn active" onclick="showAll('snow')"> Show all</button>
+        <button class="myBtn" onclick="showBudget('snow')"> Budget</button>
+        <button class="myBtn" onclick="showLuxury('snow')"> Luxury</button>
     </div>
     <div id="main" class="container">
         <div class="row" id="main-row">
