--- a/sun.html
+++ b/sun.html
@@ -58,9 +58,9 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="myBtn active" id="showAll" onclick="showAllSun()"> Show all</button>
-        <button class="myBtn" id="budget" onclick="showBudgetSun()"> Budget</button>
-        <button class="myBtn" id="luxury" onclick="showLuxurySun()"> Luxury</button>
+        <button class="myBtn active" id="showAll"  onclick="showAll('sun')"> Show all</button>
+        <button class="myBtn" id="budget"  onclick="showBudget('sun')"> Budget</button>
+        <button class="myBtn" id="luxury"  onclick="showLuxury('sun')"> Luxury</button>
     </div>
     <div id="main" class="container">
         <div class="row" id="main-row">
