fixed issue with user greeting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body  onload="cloneFunction1()">
+<body>
 
     <!-- Alert -->
 
@@ -61,23 +61,21 @@
         <div class="container-fluid media-main jumbotron">
             <section class="choice-container text-center mt-5">
                 <div class="row welcome-heading">
-                    <div class="col-12 mt-5 choice-question">
-                        <h1>
-                            <p class="col-12"> Which way shall you wander? </p>
-                        </h1>
+                    <div class="col-12 mt-5 choice-question" id= "greeting-question">
+                        
                     </div>
                 </div>
                 <main class="grid">
                     <div class="container mt-5">
                         <div class="row">
-                            <div class="col-4 col-md-4 text-center sun-media mt-5" id="sun-1">
+                            <div class="col-4 col-md-4 text-center sun-media mt-5" id="sunCard">
                                 <h1>
                                     Sun
                                 </h1>
                             </div>
                             <div class="col-4">
                             </div>
-                            <div class="col-4 col-md-4 text-center snow-media mt-5" id="snow-1">
+                            <div class="col-4 col-md-4 text-center snow-media mt-5" id="snowCard">
                                 <h1>
                                     Snow
                                 </h1>
