--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
 
     <div class="container-choice">
         <div class="container-fluid media-main jumbotron">
-            <section class="choice-container text-center mt-5">
+            <section class="choice-container text-center mt-3">
                 <div class="row welcome-heading">
-                    <div class="col-12 mt-5 choice-question" id= "greeting-question">
+                    <div class="col-12 mt-3 choice-question" id= "greeting-question">
                         
                     </div>
                 </div>
                 <main class="grid">
-                    <div class="container mt-5">
+                    <div class="container mt-3">
                         <div class="row">
-                            <div class="col-4 col-md-4 text-center sun-media mt-5" id="sunCard">
+                            <div class="col-4 col-md-4 text-center sun-media " id="sunCard">
                                 <h1>
                                     Sun
                                 </h1>
                             </div>
                             <div class="col-4">
                             </div>
-                            <div class="col-4 col-md-4 text-center snow-media mt-5" id="snowCard">
+                            <div class="col-4 col-md-4 text-center snow-media " id="snowCard">
                                 <h1>
                                     Snow
                                 </h1>
