--- a/destination.html
+++ b/destination.html
@@ -56,36 +56,25 @@
             </ul>
         </div>
     </nav>
-    <footer>
-        <section id="footer">
-            <div class="container-fluid">
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col-12">
-                            <h5>Follow Us on social media</h5>
-                        </div>
-                        <div class="container social-icons">
-                            <div class="row">
-                                <div class="col-12">
-                                    <a href="https://www.facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-square"></i>
-                                    </a>
-                                    <a href="https://www.twitter.com/" target="_blank">
-                                        <i class="fab fa-twitter-square"></i>
-                                    </a>
-                                    <a href="https://www.instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram-square"></i>
-                                    </a>
-                                    <a href="https://www.youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube-square"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <footer class="sticky-footer text-center">
+        <div class="container-fluid social-icons">
+            <div class="row">
+                <div class="col-12">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fab fa-instagram-square"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <i class="fab fa-youtube-square"></i>
+                    </a>
                 </div>
             </div>
-        </section>
+        </div>
     </footer>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
