added basic contact form to contact page to be styled later

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload="showSunLocations()">
+<body>
 
     <!-- Alert -->
 
@@ -45,27 +45,57 @@
                     <a class="nav-link" href="index.html">Home<span class="sr-only">Home</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link current" href="sun.html">Sun</a>
+                    <a class="nav-link" href="sun.html">Sun</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="snow.html">Snow</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link current" href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </div>
     </nav>
-
-    <div id="myBtnContainer">
-        <button class="myBtn current" id="showAll"  onclick="showAll('sun')"> Show all</button>
-        <button class="myBtn" id="budget"  onclick="showBudget('sun')"> Budget</button>
-        <button class="myBtn" id="luxury"  onclick="showLuxury('sun')"> Luxury</button>
-    </div>
-    <div id="main" class="container">
-        <div class="row" id="main-row">
+    <div class="grid">
+        <div class="container contact-form-container">
+            <div class="row">
+                <div class="col-12 contact-form my-5">
+                    <form class="contact-form">
+                        <div class="form-group">
+                            <label for="first-name-input">Name</label>
+                            <input type="text" class="form-control" id="first-name-input"
+                                placeholder="Enter your first name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="surname-input">Surname</label>
+                            <input type="text" class="form-control" id="surname-input"
+                                placeholder="Enter your last name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email-input">Email Address</label>
+                            <input type="email" class="form-control" id="email-input"
+                                placeholder="Enter your email address" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="query-input">Your Question</label>
+                            <input type="text" class="form-control" id="query-input" placeholder="Ask us something">
+                        </div>
+                        <div class="form-group row">
+                            <button type="submit" class="btn btn-info offset-5">Send!</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
@@ -86,8 +116,6 @@
             </div>
         </div>
     </footer>
-
-
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
