--- a/snow.html
+++ b/snow.html
@@ -58,7 +58,7 @@
     </nav>
 
     <div id="myBtnContainer">
-        <button class="myBtn active" onclick="showAll('snow')"> Show all</button>
+        <button class="myBtn current" onclick="showAll('snow')"> Show all</button>
         <button class="myBtn" onclick="showBudget('snow')"> Budget</button>
         <button class="myBtn" onclick="showLuxury('snow')"> Luxury</button>
     </div>
