styled button on form to continue color theme across pages

--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
 <div class="grid">
         <div class="container contact-form-container">
             <div class="row">
-                <div class="col-6 contact-form-right my-5 d-none d-sm-none d-md-inline d-lg-inline">
+                <div class="col-6 contact-form-left my-5 d-none d-sm-none d-md-inline d-lg-inline">
                     <div class="contact-image"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 col-xl-6 contact-form-left my-5">
+                <div class="col-12 col-md-6 col-lg-6 col-xl-6 contact-form-right my-5">
                     <form class="contact-form">
                         <div class="form-group">
                             <label for="first-name-input">Name</label>
@@ -84,7 +84,7 @@
                             <input type="text" class="form-control" id="query-input" placeholder="Ask us something">
                         </div>
                         <div class="form-group row">
-                            <button type="submit" class="btn btn-info offset-5">Send!</button>
+                            <button type="submit" class=" myBtn btn-lg btn-info offset-5">Send!</button>
                         </div>
                     </form>
                 </div>
