added register button to snow and sun pages

--- a/snow.html
+++ b/snow.html
@@ -66,6 +66,9 @@
         <div class="row" id="main-row">
         </div>
     </div>
+    <div class ="register-Btn" >
+         <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
+    </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
