changed heights to aid apperance of pages to user

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 
     <div class="container-choice">
         <div class="container-fluid media-main jumbotron">
-            <section class="choice-container text-center mt-3">
+            <div class="choice-container text-center mt-3">
                 <div class="row welcome-heading">
                     <div class="col-12 mt-3 choice-question" id= "greeting-question">
-                        
                     </div>
                 </div>
                 <main class="grid">
@@ -83,8 +82,11 @@
                         </div>
                     </div>
                 </main>
-            </section>
+            </div>
         </div>
+    </div>
+    <div class ="register-Btn" >
+         <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
     </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
