added margin class to button to help visually

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                             <label for="query-input">Your Question</label>
                             <input type="text" class="form-control" id="query-input" placeholder="Ask us something">
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row my-5">
                             <button type="submit" class=" myBtn btn-lg btn-info offset-5">Send!</button>
                         </div>
                     </form>
