--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
     </nav>
 
     <div class="container-choice">
-        <div class="container-fluid media-main jumbotron">
-            <div class="choice-container text-center mt-3">
+        <div class="container my-3">
+            <div class="choice-container text-center">
                 <div class="row welcome-heading">
-                    <div class="col-12 mt-3 choice-question" id= "greeting-question">
+                    <div class="col-12 choice-question my-3" id= "greeting-question">
                     </div>
                 </div>
-                <main class="grid">
-                    <div class="container mt-3">
+            </div>
+        </div>
+    </div>
+
+                    <main class="container">
                         <div class="row">
                             <div class="col-4 col-md-4 text-center sun-media " id="sunCard">
                                 <h1>
@@ -80,14 +83,16 @@
                                 </h1>
                             </div>
                         </div>
-                    </div>
-                </main>
+                    </main>
+
+    <div class="container">
+        <div class="row">
+            <div class ="register-Btn col-12" >
+              <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
             </div>
         </div>
     </div>
-    <div class ="register-Btn" >
-         <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
-    </div>
+    
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
