styled modal to fit theme for site

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <form>
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="sign-up">Sign up with your email and join our mailing list for special discounts!</h5>
+                        <h5 class="modal-title" id="sign-up">Join our mailing list for special discounts!</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -157,8 +157,8 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-danger">Register Now!</button>
+                        <button class="btn closeBtn" data-dismiss="modal">Close</button>
+                        <button type="submit" class="modalBtn btn">Register Now!</button>
                     </div>
                 </div>
             </form>
