added cost legend to enable user to value each holiday package

--- a/snow.html
+++ b/snow.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload= "showSnowLocations()">
+<body onload="showSnowLocations()">
 
     <!-- Alert -->
 
@@ -56,7 +56,15 @@
             </ul>
         </div>
     </nav>
-
+    <div class="container text-center mt-3">
+        <div class="row legend-cost">
+            <div class="col-12">
+                <p class="cost">
+                    *** € = estimated cost of €250 ***
+                </p>
+            </div>
+        </div>
+    </div>
     <div id="myBtnContainer">
         <button class="myBtn current" onclick="showAll('snow')"> Show all</button>
         <button class="myBtn" onclick="showBudget('snow')"> Budget</button>
@@ -66,8 +74,8 @@
         <div class="row" id="main-row">
         </div>
     </div>
-    <div class ="register-Btn" >
-         <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
+    <div class="register-Btn">
+        <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
     </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
