--- a/sun.html
+++ b/sun.html
@@ -56,7 +56,15 @@
             </ul>
         </div>
     </nav>
-
+    <div class="container text-center mt-3">
+        <div class="row legend-cost">
+            <div class="col-12">
+                <p class="cost">
+                    *** € = estimated cost of €250 ***
+                </p>
+            </div>
+        </div>
+    </div>
     <div id="myBtnContainer">
         <button class="myBtn current" id="showAll"  onclick="showAll('sun')"> Show all</button>
         <button class="myBtn" id="budget"  onclick="showBudget('sun')"> Budget</button>
