--- a/snow.html
+++ b/snow.html
@@ -75,7 +75,8 @@
         </div>
     </div>
     <div class="register-Btn">
-        <button type="submit" class="myBtn btn-lg btn-info my-5">Register Now!</button>
+        <button type="submit" class="myBtn btn-lg btn-info my-5" data-toggle="modal"
+                data-target="#register-modal">Register Now!</button>
     </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
@@ -97,6 +98,56 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="register-modal"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <form>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="sign-up">Join our mailing list for special discounts!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="enter-email">Email Address</label>
+                            <input type="email" class="form-control" id="enter-email" aria-describedby="emailHelp"
+                                placeholder="Please enter your email address..." required>
+                            <small id="emailHelp" class="form-text text-muted">You need this to register for our
+                                platform</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="email-confirm">Please Confirm Your Email address</label>
+                            <input type="email" class="form-control" id="email-confirm" aria-describedby="emailHelp"
+                                placeholder="Please confirm your email address..." required>
+                        </div>
+                        <div class="form-group">
+                            <label for="enter-password">Password</label>
+                            <input type="password" class="form-control" id="enter-password"
+                                placeholder="Please Enter Your Password..." required>
+                        </div>
+                        <div class="form-group">
+                            <label for="re-enter-password">Re-enter your Password</label>
+                            <input type="password" class="form-control" id="re-enter-password"
+                                placeholder="Please re-enter your password..." required>
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="checkbox">
+                            <label class="form-check-label" for="checkbox">I wish to receive emails informing me of new
+                                destinations.</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn closeBtn" data-dismiss="modal">Close</button>
+                        <button type="submit" class="modalBtn btn">Register Now!</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
