updated basic layout of destination page

--- a/destination.html
+++ b/destination.html
@@ -56,6 +56,41 @@
             </ul>
         </div>
     </nav>
+     <div class="destination-container">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="main-destination-image">
+                            <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="barcelona">
+                            <div class="centered">Barcelona</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="destination-text">
+                            hello
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="map-buttons" id= "map-buttons">
+                            buttons left
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="map-right" id= "map-canvas">
+                            map right
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
