added more styling to provide template for all destinations

--- a/destination.html
+++ b/destination.html
@@ -62,7 +62,9 @@
                     <div class="col-12">
                         <div class="main-destination-image">
                             <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="barcelona">
-                            <div class="centered">Barcelona</div>
+                            <div class="centered">
+                                <h1>Barcelona</h1>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -77,15 +79,17 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row map-container">
                     <div class="col-6">
-                        <div class="map-buttons" id= "map-buttons">
-                            buttons left
+                        <div class="map-buttons text-center my-5" id= "map-buttons">
+                            <button class="mapBtn">Hotels</button>
+                            <button class="mapBtn">Food & Drinks</button>
+                            <button class="mapBtn">Things to do</button>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="map-right" id= "map-canvas">
-                            map right
+                            <img src="https://cdn.pixabay.com/photo/2012/01/09/09/59/earth-11595_1280.jpg" alt="">
                         </div>
                     </div>
                 </div>
