--- a/destination.html
+++ b/destination.html
@@ -56,45 +56,69 @@
             </ul>
         </div>
     </nav>
-     <div class="destination-container">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="main-destination-image">
-                            <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="barcelona">
-                            <div class="centered">
-                                <h1>Barcelona</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="destination-text">
-                            hello
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row map-container">
-                    <div class="col-6">
-                        <div class="map-buttons text-center my-5" id= "map-buttons">
-                            <button class="mapBtn">Hotels</button>
-                            <button class="mapBtn">Food & Drinks</button>
-                            <button class="mapBtn">Things to do</button>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="map-right" id= "map-canvas">
-                            <img src="https://cdn.pixabay.com/photo/2012/01/09/09/59/earth-11595_1280.jpg" alt="">
+    <div class="destination-container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 img-container">
+                    <div class="main-destination-image">
+                        <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg"
+                            alt="barcelona">
+                        <div class="centered">
+                            <h1>Barcelona</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="destination-text">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Average Cost of day</td>
+                                    <td>€116</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Average Cost of transport</td>
+                                    <td>€15</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Average Cost of Meals</td>
+                                    <td>€23</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Local Language</td>
+                                    <td>Spanish (Native) - English (Widely spoken)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6 map-container">
+                    <div class="map-buttons text-center my-5" id="map-buttons">
+                        <button class="mapBtn">Hotels</button>
+                        <button class="mapBtn">Food & Drinks</button>
+                        <button class="mapBtn">Things to do</button>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="map-right my-5" id="map-canvas">
+                        <img src="https://cdn.pixabay.com/photo/2012/01/09/09/59/earth-11595_1280.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
