--- a/destination.html
+++ b/destination.html
@@ -70,6 +70,15 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid my-3 text-center">
+            <div class="row">
+                <div class="col-12">
+                    <div class="city-info">
+                        <h3>City Information</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
