added emailjs links to register pages

--- a/destination.html
+++ b/destination.html
@@ -61,8 +61,7 @@
             <div class="row">
                 <div class="col-12 img-container">
                     <div class="main-destination-image">
-                        <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg"
-                            alt="barcelona">
+                        <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="barcelona">
                         <div class="centered">
                             <h1>Barcelona</h1>
                         </div>
