--- a/index.html
+++ b/index.html
@@ -61,39 +61,39 @@
         <div class="container my-3">
             <div class="choice-container text-center">
                 <div class="row welcome-heading">
-                    <div class="col-12 choice-question my-3" id= "greeting-question">
+                    <div class="col-12 choice-question my-3" id="greeting-question">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-                    <main class="container">
-                        <div class="row">
-                            <div class="col-4 col-md-4 text-center sun-media " id="sunCard">
-                                <h1>
-                                    Sun
-                                </h1>
-                            </div>
-                            <div class="col-4">
-                            </div>
-                            <div class="col-4 col-md-4 text-center snow-media " id="snowCard">
-                                <h1>
-                                    Snow
-                                </h1>
-                            </div>
-                        </div>
-                    </main>
+    <main class="container">
+        <div class="row">
+            <div class="col-4 col-md-4 text-center sun-media " id="sunCard">
+                <h1>
+                    Sun
+                </h1>
+            </div>
+            <div class="col-4">
+            </div>
+            <div class="col-4 col-md-4 text-center snow-media " id="snowCard">
+                <h1>
+                    Snow
+                </h1>
+            </div>
+        </div>
+    </main>
 
     <div class="container">
         <div class="row">
-            <div class ="register-Btn col-12" >
-              <button type="submit" class="myBtn btn-lg btn-info my-5" data-toggle="modal"
-                data-target="#register-modal">Register Now!</button>
+            <div class="register-Btn col-12">
+                <button type="submit" class="myBtn btn-lg btn-info my-5" data-toggle="modal"
+                    data-target="#register-modal">Register Now!</button>
             </div>
         </div>
     </div>
-    
+
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
@@ -164,7 +164,12 @@
             </form>
         </div>
     </div>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("YOUR_USER_ID");
+        })();
+    </script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
