--- a/snow.html
+++ b/snow.html
@@ -13,6 +13,8 @@
     <script type="text/javascript">
         (function () {
             emailjs.init("user_uZfhju5blSucDKMUF6PGS");
+            emailjs.send("gmail", "wanderers_way", { name: "User", notes: "I wish to register for discounts"
+            })
         })();
     </script>
     <script type="text/javascript" src="assets/js/script.js"></script>
