--- a/sun.html
+++ b/sun.html
@@ -109,7 +109,7 @@
     <div class="modal" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="register-modal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <form>
+            <form onsubmit="return sendMail(this);">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="sign-up">Join our mailing list for special discounts!</h5>
