--- a/snow.html
+++ b/snow.html
@@ -155,6 +155,7 @@
             </form>
         </div>
     </div>
+    <script src="assets/js/sendEmail.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
