--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="enter-email">Email Address</label>
-                            <input type="email" class="form-control" id="enter-email" aria-describedby="emailHelp"
+                            <input type="email" name= "emailaddress" class="form-control" id="enter-email" aria-describedby="emailHelp"
                                 placeholder="Please enter your email address..." required>
                             <small id="emailHelp" class="form-text text-muted">You need this to register for our
                                 platform</small>
                         </div>
                         <div class="form-group">
                             <label for="email-confirm">Please Confirm Your Email address</label>
-                            <input type="email" class="form-control" id="email-confirm" aria-describedby="emailHelp"
+                            <input type="email" name= "emailaddressConfirmed" class="form-control" id="email-confirm" aria-describedby="emailHelp"
                                 placeholder="Please confirm your email address..." required>
                         </div>
                         <div class="form-group">
