--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload="loadWelcome()">
+<body onload="loadWelcome(), sunChosen(), snowChosen(), makeOpacity()">
 
     <!-- Alert -->
 
@@ -159,7 +159,7 @@
         </div>
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script type="text/javascript" defer>
+    <script type="text/javascript">
         (function () {
             emailjs.init("user_uZfhju5blSucDKMUF6PGS");
         })();
