added focus pseudo class to map buttons

--- a/destination.html
+++ b/destination.html
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="snow.html">Snow</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="destination.html">Destination</a>
+                    <a class="nav-link current" href="destination.html">Destination</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
