removed function call from sun and snow pages and put them inside dynamic function to call the clicked destination function

--- a/destination.html
+++ b/destination.html
@@ -59,7 +59,7 @@
             </ul>
         </div>
     </nav>
-    <div class="destination-container">
+    <div class="destination-container container-fluid">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 img-container">
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container text-center">
             <div class="row">
                 <div class="col-12">
                     <div class="destination-text">
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-6 map-container">
                     <div class="map-buttons text-center my-5" id="map-buttons">
