--- a/snow.html
+++ b/snow.html
@@ -12,7 +12,7 @@
     <title>Wanderers Way</title>
 </head>
 
-<body onload="showSnowLocations(), destinationChosen('snow')">
+<body onload="showSnowLocations()">
 
     <!-- Alert -->
 
