added destinations js file to handle destinations page

--- a/destinations.html
+++ b/destinations.html
@@ -71,7 +71,7 @@
         <button class="myBtn" id="luxury"  onclick="showLuxury('sun')"> Luxury</button>
     </div>
     <div id="main" class="container">
-        <div class="row" id="main-row">
+        <div class="row" id="destinations">
         </div>
     </div>
     <div class ="register-Btn" >
@@ -147,6 +147,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript" src="assets/js/data.js"></script>
+    <script type="text/javascript" src="assets/js/destinations.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript">
         (function () {
