added text to produce cards inside anchor tag in destinations.js

--- a/destination.html
+++ b/destination.html
@@ -56,7 +56,9 @@
             </ul>
         </div>
     </nav>
-    <div class="destination-container container-fluid">
+    <div id="destination">
+        hello
+        <div class="destination-container container-fluid">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 img-container">
@@ -127,6 +129,8 @@
             </div>
         </div>
     </div>
+    </div>
+    
     <footer class="sticky-footer text-center">
         <div class="container-fluid social-icons">
             <div class="row">
